force-app/main/default/objects/custom_create280__c/custom_create280__c.object-meta.xml
<CustomObject>
    <label>Custom created object280</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects280</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>