force-app/main/default/objects/custom_create280__c/fields/custom_create_280field549__c.field-meta.xml
<CustomField>
    <fullName>custom_create_280field549__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 280field549</label>
    <type>Checkbox</type>
</CustomField>